# bmstu-raycast-game

./: .gitignore  CMakeLists.txt  README.md
docs/: technical_design_ru.md
resources/maps/: arena.txt
resources/textures/: README.md
scripts/: generate_practice_report.py
src/: main.cpp
src/application/: GameLoop.cpp  GameLoop.hpp  GameSession.cpp  GameSession.hpp  InputState.hpp  LaunchOptions.hpp
src/domain/: CollisionSystem.cpp  CollisionSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  Map.cpp  Map.hpp  Math.hpp  Player.hpp  ShootingSystem.cpp  ShootingSystem.hpp  World.cpp  World.hpp
src/infrastructure/: TextMapLoader.cpp  TextMapLoader.hpp
src/network/: EnetClient.cpp  EnetClient.hpp  EnetHost.cpp  EnetHost.hpp  EnetRuntime.hpp  PacketCallback.hpp  PacketSerializer.cpp  PacketSerializer.hpp  Protocol.hpp
src/presentation/: Raycaster.cpp  Raycaster.hpp  SdlApp.cpp  SdlApp.hpp
